--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -358,6 +358,9 @@ body {
   color: white;
   font-weight: bold;
 }
+.status:hover{
+  background-color: #c2db86;
+}
 .status-rejected {
   background-color: #dc3545;
 }
@@ -397,6 +400,35 @@ body {
   -moz-box-shadow: 0px 0px 24px 5px rgba(0, 0, 0, 0.1);
   box-shadow: 0px 0px 24px 5px rgba(0, 0, 0, 0.1);
   border: none;
+}
+
+.custom-alert {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  z-index: 1050;
+  width: auto;
+  max-width: 300px;
+  padding: 10px 20px;
+  margin: 0;
+  border-radius: 5px;
+  font-size: 16px;
+  transition: 0.3s;
+}
+
+.alert-success {
+  background-color: #28a745; /* Màu xanh cho thông báo thành công */
+  color: white;
+}
+
+.alert-warning {
+  background-color: #ffc107; /* Màu vàng cho thông báo lỗi */
+  color: black;
+}
+
+.custom-alert span {
+  display: inline-block;
+  width: 100%;
 }
 
 @media (max-width: 767px) {
