--- a/src/main/resources/templates/User/V3/Recruiters_Followed.html
+++ b/src/main/resources/templates/User/V3/Recruiters_Followed.html
@@ -51,7 +51,7 @@
                     src="/img/icons/logo2.jpg"
                     width="50"
             />
-            <span class="align-middle">Dreamers</span>
+            <span class="align-middle">Dream Jobs</span>
           </a>
 
           <ul class="sidebar-nav">
