Update Code Function now

--- a/src/main/resources/templates/user/Search.html
+++ b/src/main/resources/templates/user/Search.html
@@ -383,7 +383,7 @@
             </div>
             <div class="relative">
                 <select name="salaryRange" class="pl-4 pr-8 py-2 rounded-md focus:outline-none">
-                    <option>Tất cả mức lương</option>
+                    <option value="0">Tất cả mức lương</option>
                     <option>1-5 triệu</option>
                     <option>5-10 triệu</option>
                     <option>10-15 triệu</option>
