--- a/src/main/resources/templates/User/V3/resume_.html
+++ b/src/main/resources/templates/User/V3/resume_.html
@@ -101,7 +101,7 @@
                     src="/img/icons/logo2.jpg"
                     width="50"
             />
-            <span class="align-middle">Dreamers</span>
+            <span class="align-middle">Dream Jobs</span>
           </a>
 
           <ul class="sidebar-nav">
@@ -131,30 +131,18 @@
             <li class="sidebar-item">
               <a class="sidebar-link" href="/user-applied">
                 <i class="align-middle" data-feather="check-square"></i>
-                <span class="align-middle">Danh sách bài đăng</span>
+                <span class="align-middle">Danh sách đơn ứng tuyển</span>
               </a>
             </li>
 
             <li class="sidebar-item">
-              <a class="sidebar-link" href="#">
+              <a class="sidebar-link" href="/user-saved">
                 <i class="align-middle" data-feather="bookmark"></i>
                 <span class="align-middle">Bài viết đã lưu</span>
               </a>
             </li>
 
-            <li class="sidebar-item">
-              <a class="sidebar-link" href="#">
-                <i class="align-middle" data-feather="message-square"></i>
-                <span class="align-middle">Tin nhắn</span>
-              </a>
-            </li>
 
-            <li class="sidebar-item">
-              <a class="sidebar-link" href="#">
-                <i class="align-middle" data-feather="bell"></i>
-                <span class="align-middle">Thông báo</span>
-              </a>
-            </li>
           </ul>
         </div>
       </nav>
